--- a/must_install_R_packages.Rmd
+++ b/must_install_R_packages.Rmd
@@ -7,11 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
-
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+## Useful R packages
 
 ```{r must_install}
 install.packages("ggplot2")
@@ -28,15 +24,11 @@ install.packages("data.table")
 install.packages("broom")
 install.packages("RColorBrewer")
 
-source("https://bioconductor.org/biocLite.R")
-biocLite("DESeq2")
-
-source("https://bioconductor.org/biocLite.R")
-biocLite("sva")
+## Bioconductor packages
 source("https://bioconductor.org/biocLite.R")
 biocLite("qvalue")
-
-source("https://bioconductor.org/biocLite.R")
+biocLite("sva")
+biocLite("DESeq2")
 biocLite("pathview")
 biocLite("gage")
 biocLite("gageData")
@@ -44,12 +36,3 @@ biocLite("pheatmap")
 
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
