--- a/must_install_R_packages.Rmd
+++ b/must_install_R_packages.Rmd
@@ -14,6 +14,7 @@ install.packages("ggplot2")
 install.packages("dplyr")
 install.packages(c("devtools", "roxygen2", "testthat", "knitr"))
 install.packages("tidyr")
+install.packages("magrittr")
 install.packages("reshape2")
 install.packages("stringr")
 install.packages("lubridate")
@@ -29,11 +30,15 @@ source("https://bioconductor.org/biocLite.R")
 biocLite("org.Mm.eg.db")
 biocLite("qvalue")
 biocLite("sva")
+biocLite("GenomicRanges")
 biocLite("DESeq2")
 biocLite("pathview")
 biocLite("gage")
 biocLite("gageData")
 biocLite("pheatmap")
-
+biocLite("limma")
+biocLite("edgeR")
+biocLite("SummarizedExperiment")
+biocLite("topGO")
 ```
 
