--- a/must_install_R_packages.Rmd
+++ b/must_install_R_packages.Rmd
@@ -18,6 +18,8 @@ install.packages("magrittr")
 install.packages("reshape2")
 install.packages("stringr")
 install.packages("lubridate")
+install.packages("shiny")
+install.packages("shiny")
 install.packages("htmlwidgets")
 install.packages("leaflet")
 install.packages("Rcpp")
