--- a/must_install_R_packages.Rmd
+++ b/must_install_R_packages.Rmd
@@ -19,7 +19,7 @@ install.packages("reshape2")
 install.packages("stringr")
 install.packages("lubridate")
 install.packages("shiny")
-install.packages("shiny")
+install.packages("forcats")
 install.packages("htmlwidgets")
 install.packages("leaflet")
 install.packages("Rcpp")
