--- a/must_install_R_packages.Rmd
+++ b/must_install_R_packages.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Useful R packages
 
 ```{r must_install}
+install.packages("devtools")
 install.packages("ggplot2")
 install.packages("dplyr")
 install.packages(c("devtools", "roxygen2", "testthat", "knitr"))
@@ -44,5 +45,7 @@ biocLite("limma")
 biocLite("edgeR")
 biocLite("SummarizedExperiment")
 biocLite("topGO")
+library(devtools)
+install_github("satijalab/seurat")
 ```
 
